Updating BW-JAVA_OPTS